# Filter

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app/: CMakeLists.txt
apps/app/src/: main.cpp
apps/cpd/: CMakeLists.txt
apps/cpd/src/: main.cpp
apps/feature/: CMakeLists.txt
apps/feature/src/: main.cpp
apps/filter/: CMakeLists.txt
apps/match/: CMakeLists.txt
apps/mr_rpm/: CMakeLists.txt
apps/pf_pos_normal/: CMakeLists.txt
apps/temporal_filter/: CMakeLists.txt
configs/: config.json  config2.json  config2_seg.json  config_bunny.json  config_chip.json  config_cpd.json  config_horse.json  config_mesh.json  config_patch2.json  config_pcd.json  config_perm.json  config_person.json  config_pos.json  config_seg.json  config_seg_pcd.json  config_seq05.json  config_seq14.json  config_seq60.json  config_seq91.json  temp_config.json  trans.json  trans2.json
configs/filter/: config_filter.json
libs/: CMakeLists.txt
libs/lib/: CMakeLists.txt
libs/lib/include/: densematch.hpp  filterPF.hpp  icp.hpp  keypoints.hpp  kitti.hpp  match.hpp  metrics.hpp  normal.hpp  patchmatch_icp.hpp  permutohedral_filter.hpp  pf.hpp  pf_vector.hpp  pfpoint.hpp  segment.hpp  system.hpp  temporalfilter.hpp  trimmed_icp.h  util.hpp  visualize.hpp
libs/lib/src/: densematch.cpp  filterPF.cpp  icp.cpp  keypoints.cpp  kitti.cpp  match.cpp  metrics.cpp  normal.cpp  permutohedral_filter.cpp  pf.cpp  pf_vector.cpp  pfpoint.cpp  segment.cpp  system.cpp  temporalfilter.cpp  util.cpp  visualize.cpp
mr_rpm/: README.md  experiment.sh  mr_rpm.sh
python/: estimate_transform_rigid.py  evaluate_rigid.py  gmmreg.py  mesh_eval.py
scripts/: seq.sh  seq_cpd.sh  seq_perm.sh  seq_sequence.sh
(+5 files in other folders)
